# hcad

./: .gitignore  Example.hs  HCad.hs  README.md  cabal.project  hcad.cabal
Algebra/: Linear.hs
HCad/: Assembly.hs  Expr.hs  Nuts.hs  Part.hs  SCAD.hs
HCad/Part/: Extensions.hs
