name:           hcad
version:        0.1
category:       Graphics
synopsis:       Haskell CAD library
license:        GPL
license-file:   LICENSE
author:         Jean-Philippe Bernardy
maintainer:     jeanphilippe.bernardy@gmail.com
Cabal-Version:  >= 1.18
build-type:     Simple

library
  build-depends: base < 666
               , gasp
               , glpk-hs
               , mtl
  exposed-modules: Algebra.Linear
                 , HCad.Assembly

  default-language:    Haskell2010
